Refactor: Remove unused imports and dependencies
Removed unused imports and @Autowired dependencies from multiple classes. Also adjusted the declaration of a variable to private and relocated existing TODO comments for better readability. These changes improve code cleanliness and maintainability.